# DEODR

./: .appveyor.yml  .flake8  .gitignore  .isort.cfg  DEODR.code-workspace  DifferentiableRenderer.h  LICENSE  activate_venv.bat  camera.pickle  check_backward.py  create_latex_images.py  create_venv.bat  licence.txt  pyproject.toml  readme.md  requirements.in  requirements.ini  requirements.txt  requirements_build.txt  requirements_unpinned.txt  ruff.toml  setup.cfg  setup.py
.github/: dependabot.yml
C++/: DifferentiableRenderer.h  DifferentiableRenderer.h.bak
DEODR/: __init__.py  _differentiable_renderer.pxd  _differentiablerenderer.pxd  differentiable_renderer.py  differentiable_renderer_cython.pyx  differentiable_renderer_pytorch.py  differentiablerenderer.py  differentiablerenderer_cython.pyx  laplacianRigidEnergy.py  laplacian_rigid_energy.py  laplacian_rigid_energy_pytorch.py  meshFitter.py  mesh_fitter - Copie.py  mesh_fitter.py  mesh_fitter.py.bak  mesh_fitter_nump.py  mesh_fitter_pytorch.py  obj.py  test_render.py  test_tangeant.py  tools.py  triangulatedMesh.py  triangulated_mesh.py  triangulated_mesh_pytorch.py
Matlab/: array2D.h  camera_project.m  compile.m  mesh2scene.m  mesh_fitting.m  render.cpp  render.mexa64  render.mexw64  render_and_compare.m  render_b.cpp  render_b.mexa64  render_b.mexw64  render_b_c.mexa64  render_c.mexa64  test_render.m  test_render2.m
_deodr/: __init__.py  differentiable_renderer_cython.cpp  differentiable_renderer_cython.html  differentiablerenderer_cython.cpp  differentiablerenderer_cython.html  laplacian_rigid_energy.py  mesh_fitter.py  obj.py  tools.py
deodr/: __init__.py  _differentiable_renderer.pxd  (+8 more)
(+86 files in other folders)
