[build-system]
requires = ["setuptools", "wheel", "numpy>=2.0.0", "Cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "DEODR"
version = "0.2.3"
description = "A differentiable 3D mesh renderer"
authors = [  { name = "Martin de La Gorce", email = "martin.delgorce@gmail.com" }]
requires-python = ">=3.9"
license = { text = "BSD" }
readme = "readme.md"

dependencies = [
  "numpy>=2.0.0", "scipy"
]

[tool.black]
line-length = 88
